Added tests for `func import` and `func export` Also allows both methods to take a filename instead asking directly.  If none are provided, you will be asked.